[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbsphinx-link"
version = "1.3.3"
description = "A sphinx extension for including notebook files outside sphinx source root"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Vidar Tonaas Fauske", email = "vidartf@gmail.com" }
]
keywords = ["Interactive", "Interpreter", "Shell", "Web"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "nbsphinx",
  "sphinx>=1.8",
]

[project.optional-dependencies]
docs = [
  "sphinx_rtd_theme",
  "ipython",
]

[project.urls]
Home = "https://github.com/vidartf/nbsphinx-link"

[tool.setuptools.packages.find]
include = ["nbsphinx_link"]
